# annslicer

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark.yml  build.yml  lint.yml  publish.yml  test.yml
benchmarks/: bench_slice.py  conftest.py
src/annslicer/: __init__.py  _store.py  cli.py  core.py  merge.py  slice.py
tests/: conftest.py  test_core.py  test_merge.py  test_slice.py
