[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "annslicer"
dynamic = ["version"]
description = "Out-of-core sharding of large .h5ad AnnData files with minimal memory usage."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "sfleming" }]
keywords = ["anndata", "h5ad", "bioinformatics", "single-cell", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.9",
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
]

[project.optional-dependencies]
dev = [
    "annslicer[zarr]",
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy==1.15.0",
    "build",
    "twine",
]
zarr = [
    "zarr>=2.10",
]

[project.scripts]
annslicer = "annslicer.cli:main"

[project.urls]
Homepage = "https://github.com/sfleming/annslicer"
"Bug Tracker" = "https://github.com/sfleming/annslicer/issues"

# ---------------------------------------------------------------------------
# setuptools-scm: derive version from git tags (e.g. `git tag v0.1.0`)
# ---------------------------------------------------------------------------
[tool.setuptools_scm]
# Writes src/annslicer/_version.py so the version is available at runtime
# without requiring the package to be installed from PyPI.
write_to = "src/annslicer/_version.py"
# Used when no git tag is present (e.g. fresh clone before first release).
fallback_version = "0.0.0.dev0"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

# merge.py and _store.py use a dual h5py/zarr Store pattern that is structurally incompatible
# with static type-checking without a complex Protocol; suppress errors there only.
[[tool.mypy.overrides]]
module = "annslicer.merge"
ignore_errors = true

[[tool.mypy.overrides]]
module = "annslicer._store"
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]
exclude = ["src/annslicer/_version.py"]

[tool.ruff.lint]
# E/W: pycodestyle  F: Pyflakes  I: isort  UP: pyupgrade  B: flake8-bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is handled by ruff format, not lint

[tool.ruff.lint.isort]
known-first-party = ["annslicer"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# benchmarks/ is excluded from the default test run; use `make benchmark` instead.
addopts = "-v"
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
